# api-deluge-rasp

./: CMakeLists.txt  README.md  build.sh  main.cpp  torrent.h
manage/: handler.h  manager.cpp  manager.h
